Updates to diary

--- a/Diary.ipynb
+++ b/Diary.ipynb
@@ -87,7 +87,33 @@
     "\n",
     "Better yet, can I use a neural network to estimate a non-normal distribution? Assume I can change the cost function to be zero when the $Ŷ$ is larger than a given percentile of the $Y$, I could train the network to calculate all the percentiles of a distribution.\n",
     "\n",
-    "So I can setup buy/sell trades to happen when the prices reaches p10/p90 of the expected price range for a given day, or something like that.\n"
+    "So I can setup buy/sell trades to happen when the prices reaches p10/p90 of the expected price range for a given day, or something like that.\n",
+    "\n",
+    "\n",
+    "## 2018-04-01\n",
+    "\n",
+    "### Putting stuff together\n",
+    "\n",
+    "Today I wrote down and organized all my ideas on a new [github project](https://github.com/paulo-raca/mo810-stock-predict), and sent them over to Ricardo for discussion.\n",
+    "\n",
+    "\n",
+    "## 2018-04-03\n",
+    "\n",
+    "After a couple of days discussing, the final project description was sent to the professor by email.\n",
+    "\n",
+    "\n",
+    "## 2018-04-08\n",
+    "\n",
+    "Professor replied to our project description with minor comments / suggestions.\n",
+    "\n",
+    "\n",
+    "## 2018-04-10\n",
+    "\n",
+    "We reviewed all projects during the class today, and had my attention drawn to the group using reinforcement learning to train a computer to play Pac Man.\n",
+    "\n",
+    "I'm now considering that instead of trying to model stock values as a regression of the value in the next day from the time series, we should try to train a trader: Given the time series and current assets, the trader generates buy/sell orders, and which are executed or not based on the market values for the following days.\n",
+    "\n",
+    "Some extra details have been added on the [project's github](https://github.com/paulo-raca/mo810-stock-predict/blob/master/README.md#semi-automatic-trading)"
    ]
   },
   {
@@ -95,7 +121,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2018-04-01\n"
+   ]
   }
  ],
  "metadata": {
@@ -114,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
